tests/fixtures/valid/exception/assert_basic.py
# Basic assert test
x: int = 10
assert x > 5
print(b"assertion passed")
