tests/fixtures/invalid/int_bytes.py
# Cannot call int() with Bytes
x = int(b"hello")
